--- a/WebApplication1_P15/Views/Home/IoC.cshtml
+++ b/WebApplication1_P15/Views/Home/IoC.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@inject ASP_P15.Services.Hash.IHashService hashService
+@inject ASP_P15.Services.FileName.IFileNameService fileNameService
+@{
     ViewData["Title"] = "Ioc";
 }
 
@@ -26,13 +28,43 @@
     <li>Створюємо інтерфейс для служби IHashService</li>
     <li>Створюємо клас - імплементацію інтерфейсу (Md5HashService)</li>
     <li>Реєструємо службу у Program.cs (див. коментарі там)</li>
-    <li>Інжектуємо службу у контролері (див. коментарі там)</li>
+    <li>Інжектуємо службу у контролері (див. коментарі у HomeController.cs)</li>
 </ul>
 <ul>
     <li>Створюємо ще один клас - ShaHashService</li>
     <li>Замінюємо клас в інструкції реєстрації сервісу (Program.cs)</li>
 </ul>
+
+
 <p>
-    hash = @ViewData["hash"]
+    hash (from controller) = @ViewData["hash"] <br />
+    hash (from view) = @hashService.Digest("123") <br />
+    hashCode (from controller) = @ViewData["hashCode"] <br />
+    hashCode (from view) = @hashService.GetHashCode()
 </p>
 
+<h3>Сервіс генерації випадкових паролів (OTP - one time password)</h3>
+<p>
+    password (otp4) = @ViewData["password"] <br />
+</p>
+
+<h3>Часи існування служб (Service Scopes)</h3>
+<p>
+    Деякі об'єкти служби нормально себе поводять, якщо створюються тільки один раз, наприклад, служба хешування, генератор випадкових сутностей.
+    Інші об'єкти можуть вимагати перестворення з новими запитами, наприклад, служби пов'язані з доступом користувачів (новий запит - новий користувач - нова служба).
+    Деякі об'єкти взагалі одноразові, тобто не передбачають повторне використання.
+    Ці часові області "життя" об'єктів і називають Service Scopes. А до задач IoC (інверсії управління) належить також управління життєвим циклом служб.
+</p>
+<p>
+    Розрізняється декілька способів реєстрації служб: <br />
+    <code>AddSingleton</code> - об'єкт залишається незмінним максимально довго, навіть при оновленні сторінки. <br />
+    <code>AddScoped</code> - об'єкт залишається незмінним протягом одного запиту (Request), при оновленні сторінки змінюється. <br />
+    <code>AddTransient</code> - об'єкт змінюється при кожному зверненні - усі запити інжекції одержать різні об'єкти.
+</p>
+
+<h3>Сервіс генерації випадкових імен файлів (FileNameService)</h3>
+<p>
+    filename (lower case) = @ViewData["lowerCaseFileName"] <br />
+    filename (upper case) = @ViewData["upperCaseFileName"] <br />
+    filename (include numbers) = @ViewData["numbersFileName"]
+</p>
